force-app/main/default/objects/Repayment_Installment__c/Repayment_Installment__c.object-meta.xml
<CustomObject>
    <label>Repayment Installment</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Repayment Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>