force-app/main/default/objects/Repayment_Installment__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Users can input important notes about the installment.</description>
    <inlineHelpText>Users can input important notes about the installment.</inlineHelpText>
    <label>Additional Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>