force-app/main/default/objects/Repayment_Installment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>Today() + 60</defaultValue>
    <description>The date which the buyer is supposed to pay the installment.</description>
    <inlineHelpText>The date which the buyer is supposed to pay the installment.</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>