force-app/main/default/objects/Repayment_Installment__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount which the buyer is supposed to pay as per agreement.</description>
    <inlineHelpText>The amount which the buyer is supposed to pay as per agreement.</inlineHelpText>
    <label>Expected Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>