force-app/main/default/objects/Repayment_Installment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The actual amount which has already been paid by the buyer.</description>
    <inlineHelpText>The actual amount which has already been paid by the buyer.</inlineHelpText>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>