force-app/main/default/objects/Repayment_Installment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>The actual date when the buyer paid the installment.</description>
    <inlineHelpText>The actual date when the buyer paid the installment.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>