force-app/main/default/objects/Repayment_Installment__c/fields/Repayment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Agreement__c</fullName>
    <description>The agreement to where the installment is linked.</description>
    <inlineHelpText>The agreement to where the installment is linked.</inlineHelpText>
    <label>Repayment Agreement</label>
    <referenceTo>Repayment_Agreement__c</referenceTo>
    <relationshipLabel>Repayment Installments</relationshipLabel>
    <relationshipName>Repayment_Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>